--- a/Another_copy_of_Word2vec_and_LSTM.ipynb
+++ b/Another_copy_of_Word2vec_and_LSTM.ipynb
@@ -188,12 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "id": "Iq68t8h4Y3lT"
    },
    "outputs": [],
    "source": [
+    "#Build Model\n",
+    "\n",
     "class Encode(nn.Module):\n",
     "  def __init__(self, input_size, hidden_size, output_size, num_layers,embedding_size, dropout):\n",
     "    super(Encode, self).__init__()\n",
@@ -255,7 +257,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "#Train model\n",
     "num_epochs = 1\n",
     "valid_loss = 0\n",
     "count = 0\n",
@@ -380,7 +382,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "nlp_input = \"fucking white people bitch wut?\"\n",
+    "nlp_input = \"I love this movie guys\"\n",
     "nlp_input = clean_data(nlp_input, stop_words, 1000)\n",
     "input = input_train_dataset.lookup_indices(nlp_input)\n",
     "for m in range(31 - len(nlp_input)):\n",
