--- a/Another_copy_of_Word2vec_and_LSTM.ipynb
+++ b/Another_copy_of_Word2vec_and_LSTM.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "7e-iOKwXux4O"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "8qqRwYvGJZn2"
    },
    "outputs": [],
@@ -60,7 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load Training Data\n",
+    "data = pd.read_csv(\"sample_data/labeled_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -78,36 +79,33 @@
     }
    ],
    "source": [
+    "# Preprocess the data\n",
+    "\n",
     "wordnet = WordNetLemmatizer()\n",
     "stop_words = stopwords.words('english')\n",
-    "data = pd.read_csv(\"sample_data/labeled_data.csv\")\n",
     "def clean_data(text, stop_words, max_length):\n",
     "  text = text.lower()\n",
     "  text = text.replace(\"'\",\"\")\n",
     "  text = re.sub(\"[^a-zA-Z]\", \" \", text)\n",
     "  text = text.split()\n",
     "  text = [word for word in text if word not in stop_words]\n",
-    "\n",
     "  text = [wordnet.lemmatize(word) for word in text]\n",
     "  text = text[:max_length]\n",
-    "  text\n",
     "  return text\n",
+    "\n",
     "data[\"tweet\"] = data[\"tweet\"].apply(clean_data, stop_words = stop_words, max_length = 1000)\n",
-    "\n",
-    "\n",
-    "print(type(data[\"tweet\"]))"
+    "dataset_y = data[\"class\"].tolist()\n",
+    "dataset_x = data[\"tweet\"].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "id": "k4Zt_KvnMyUO"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_y = data[\"class\"].tolist()\n",
-    "dataset_x = data[\"tweet\"].tolist()\n",
+    "#Create training sets\n",
+    "\n",
     "X_train = dataset_x\n",
     "Y_train = dataset_y"
    ]
@@ -124,31 +122,23 @@
    },
    "outputs": [],
    "source": [
+    "#Build/Load the Vocabulary\n",
+    "\n",
     "min_freq = 2\n",
     "\n",
     "unk_token = \"<unk>\"\n",
     "pad_token = \"<pad>\"\n",
-    "\n",
     "special_tokens = [unk_token, pad_token]\n",
     "special_tokens_output = []\n",
-    "Y_train = np.array(Y_train).reshape(-1,1)\n",
-    "input_train_dataset = tvc.build_vocab_from_iterator(X_train, min_freq = min_freq, specials = special_tokens)\n",
-    "input_train_dataset.set_default_index(input_train_dataset[unk_token])\n",
     "\n",
-    "Y_train = Y_train.tolist()\n",
-    "print(Y_train)\n",
-    "print(type(Y_train))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "id": "pf_jZ4hiPksp"
-   },
-   "outputs": [],
-   "source": [
-    "torch.save(input_train_dataset, 'vocabulary_hate_speech.pt')"
+    "Y_train = np.array(Y_train).reshape(-1,1)\n",
+    "if 'vocabulary_hate_speech.pt' == None:\n",
+    "    input_train_dataset = tvc.build_vocab_from_iterator(X_train, min_freq = min_freq, specials = special_tokens)\n",
+    "    torch.save(input_train_dataset, 'vocabulary_hate_speech.pt')\n",
+    "else:\n",
+    "    input_train_dataset = torch.load('vocabulary_hate_speech.pt')\n",
+    "input_train_dataset.set_default_index(input_train_dataset[unk_token])\n",
+    "Y_train = Y_train.tolist()"
    ]
   },
   {
@@ -159,21 +149,22 @@
    },
    "outputs": [],
    "source": [
+    "#Numerize Inputs and Outputs and Pad Inputs\n",
+    "\n",
     "for i in range(len(Y_train)):\n",
     "  X_train[i] = torch.tensor(input_train_dataset.lookup_indices(X_train[i]))\n",
-    "print(type(X_train))\n",
-    "X_train = nn.utils.rnn.pad_sequence(X_train, padding_value = 0, batch_first = True)\n",
-    "X_train.shape\n"
+    "X_train = nn.utils.rnn.pad_sequence(X_train, padding_value = 0, batch_first = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "id": "ON7G_FtzVAP9"
    },
    "outputs": [],
    "source": [
+    "#Merge X, Y into a dataset and divide into batches with 32 samples in each batch\n",
     "class CustomDataset(Dataset):\n",
     "  def __init__(self, x, y):\n",
     "    self.x = x\n",
@@ -194,7 +185,7 @@
    },
    "outputs": [],
    "source": [
-    "#Build Model\n",
+    "#Build the Encoder Model\n",
     "\n",
     "class Encode(nn.Module):\n",
     "  def __init__(self, input_size, hidden_size, output_size, num_layers,embedding_size, dropout):\n",
@@ -213,24 +204,26 @@
     "    output, (hidden, cell) = self.lstm(embedding)\n",
     "    output = self.fc(output)\n",
     "    out = self.fc1(output.reshape(-1,31))\n",
-    "    return out\n",
+    "    return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "v5Y4YY0SfhYO"
+   },
+   "outputs": [],
+   "source": [
+    "#Initialize model, loss, and optimizer function\n",
     "\n",
     "input_size = len(input_train_dataset)\n",
     "hidden_size = 100\n",
     "output_size = 1\n",
     "num_layers = 2\n",
     "embedding_size = 128\n",
-    "dropout = 0.5\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "id": "v5Y4YY0SfhYO"
-   },
-   "outputs": [],
-   "source": [
+    "dropout = 0.5\n",
+    "\n",
     "model = Encode(input_size, hidden_size, output_size, num_layers, embedding_size, dropout)\n",
     "loss = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 0.001)"
@@ -238,12 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "id": "fVsWCQnX7XjZ"
    },
    "outputs": [],
    "source": [
+    "#Load Model Checkpoint\n",
+    "\n",
     "check_point = torch.load(\"check-point-hate-speech.pt\")\n",
     "model.load_state_dict(check_point['model_state_dict'])\n",
     "optimizer.load_state_dict(check_point['optimizer_state_dict'])"
@@ -258,10 +253,11 @@
    "outputs": [],
    "source": [
     "#Train model\n",
-    "num_epochs = 1\n",
+    "\n",
+    "num_epochs = 20\n",
     "valid_loss = 0\n",
     "count = 0\n",
-    "for epoch in range(15,20):\n",
+    "for epoch in range(num_epochs):\n",
     "  for input, output in dataloader:\n",
     "    output = output[0]\n",
     "    y_pred = model(input)\n",
@@ -289,36 +285,16 @@
    },
    "outputs": [],
    "source": [
+    "#Load, Clean, and Divide test file into X_test and Y_test\n",
+    "\n",
     "data_test = pd.read_csv(\"sample_data/testhatespeech.csv\")\n",
-    "data_test[\"tweet\"] = data_test[\"tweet\"].apply(clean_data, stop_words = stop_words, max_length = 1000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "EOO9ZowaabKa"
-   },
-   "outputs": [],
-   "source": [
+    "data_test[\"tweet\"] = data_test[\"tweet\"].apply(clean_data, stop_words = stop_words, max_length = 1000)\n",
     "def minimize(text, max_length):\n",
     "  text = text[:max_length]\n",
     "  return text\n",
     "data_test[\"tweet\"] = data_test[\"tweet\"].apply(minimize, max_length = 31)\n",
     "X_test = data_test[\"tweet\"].tolist()\n",
-    "Y_test = data_test[\"Toxicity\"].tolist()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "K5s8Z9tT3LKk"
-   },
-   "outputs": [],
-   "source": [
-    "X_test.append(['pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad','pad'])\n",
-    "Y_test.append(0)"
+    "Y_test = data_test[\"Toxicity\"].tolist()"
    ]
   },
   {
@@ -329,13 +305,15 @@
    },
    "outputs": [],
    "source": [
+    "#Numberize and Pad\n",
+    "\n",
     "Y_test = np.array(Y_test).reshape(-1,1)\n",
     "Y_test = Y_test.tolist()\n",
     "for j in range(len(X_test)):\n",
     "  X_test[j] = torch.tensor(input_train_dataset.lookup_indices(X_test[j]))\n",
     "X_test = nn.utils.rnn.pad_sequence(X_test, padding_value = 0, batch_first = True)\n",
-    "X_test.shape\n",
-    "X_test"
+    "Y_test = torch.tensor(Y_test, dtype = torch.float32)\n",
+    "Y_test = Y_test.reshape(-1)"
    ]
   },
   {
@@ -346,31 +324,16 @@
    },
    "outputs": [],
    "source": [
-    "Y_test = torch.tensor(Y_test, dtype = torch.float32)\n",
-    "Y_test = Y_test.reshape(-1)\n",
+    "#Conduct Model Testing\n",
     "\n",
     "with torch.no_grad():\n",
     "  y_pred = model(X_test)\n",
-    "  print(Y_test)\n",
     "  y_pred_cls = torch.max(y_pred,1)\n",
     "  for i in range (y_pred_cls.indices.shape[0]):\n",
     "    if y_pred_cls.indices[i] == 2:\n",
     "      y_pred_cls.indices[i] = 0\n",
-    "\n",
-    "  print(y_pred_cls.indices)\n",
     "  acc = y_pred_cls.indices.eq(Y_test).sum() / float(3555)\n",
-    "  print(acc.item()*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "fJu6G7bZ4KaZ"
-   },
-   "outputs": [],
-   "source": [
-    "torch.set_printoptions(profile=\"full\")\n"
+    "  print(f\"The accuracy of the model through testing: {acc.item()*100}%\")"
    ]
   },
   {
@@ -381,6 +344,7 @@
    },
    "outputs": [],
    "source": [
+    "#Model Testing by Inputs from Keyboard\n",
     "\n",
     "nlp_input = \"I love this movie guys\"\n",
     "nlp_input = clean_data(nlp_input, stop_words, 1000)\n",
