--- a/Word2vec_and_LSTM.ipynb
+++ b/Word2vec_and_LSTM.ipynb
@@ -4,18 +4,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "8qqRwYvGJZn2"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install torch==2.3.0\n",
-    "!pip install torchtext==0.18.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "dnXCMDWz7XR-"
    },
    "outputs": [],
@@ -69,15 +57,7 @@
     "id": "9Q4T-VUs9NcN",
     "outputId": "50274770-965b-4539-b120-d1d9eca42a3c"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Preprocess the data\n",
     "\n",
@@ -125,14 +105,13 @@
     "#Build/Load the Vocabulary\n",
     "\n",
     "min_freq = 2\n",
-    "\n",
     "unk_token = \"<unk>\"\n",
     "pad_token = \"<pad>\"\n",
     "special_tokens = [unk_token, pad_token]\n",
     "special_tokens_output = []\n",
     "\n",
     "Y_train = np.array(Y_train).reshape(-1,1)\n",
-    "if 'vocabulary_hate_speech.pt' == None:\n",
+    "if torch.load('vocabulary_hate_speech.pt') == None:\n",
     "    input_train_dataset = tvc.build_vocab_from_iterator(X_train, min_freq = min_freq, specials = special_tokens)\n",
     "    torch.save(input_train_dataset, 'vocabulary_hate_speech.pt')\n",
     "else:\n",
