--- a/Word2vec_and_LSTM.ipynb
+++ b/Word2vec_and_LSTM.ipynb
@@ -2,10 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install torch==2.3.0\n",
-        "!pip install torchtext==0.18.0"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -13,11 +10,10 @@
         "id": "OtSSju7cEYdG",
         "outputId": "d3e9685c-1a06-4520-c4f3-bb16c6a12b53"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: torch==2.3.0 in /usr/local/lib/python3.10/dist-packages (2.3.0)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch==2.3.0) (3.16.1)\n",
@@ -73,28 +69,32 @@
             "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=2.3.0->torchtext==0.18.0) (1.3.0)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install torch==2.3.0\n",
+        "!pip install torchtext==0.18.0"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
-        "id": "dnXCMDWz7XR-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "dnXCMDWz7XR-",
         "outputId": "db757548-bdfe-4804-c3af-ca3f7794f0ee"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/torchtext/vocab/__init__.py:4: UserWarning: \n",
+            "c:\\Users\\linhn\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchtext\\vocab\\__init__.py:4: UserWarning: \n",
             "/!\\ IMPORTANT WARNING ABOUT TORCHTEXT STATUS /!\\ \n",
             "Torchtext is deprecated and the last released version will be 0.18 (this one). You can silence this warning by calling the following at the beginnign of your scripts: `import torchtext; torchtext.disable_torchtext_deprecation_warning()`\n",
             "  warnings.warn(torchtext._TORCHTEXT_DEPRECATION_MSG)\n",
-            "/usr/local/lib/python3.10/dist-packages/torchtext/utils.py:4: UserWarning: \n",
+            "c:\\Users\\linhn\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchtext\\utils.py:4: UserWarning: \n",
             "/!\\ IMPORTANT WARNING ABOUT TORCHTEXT STATUS /!\\ \n",
             "Torchtext is deprecated and the last released version will be 0.18 (this one). You can silence this warning by calling the following at the beginnign of your scripts: `import torchtext; torchtext.disable_torchtext_deprecation_warning()`\n",
             "  warnings.warn(torchtext._TORCHTEXT_DEPRECATION_MSG)\n"
@@ -121,33 +121,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
-        "id": "E7oxskrGvW7e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "E7oxskrGvW7e",
         "outputId": "e7e1ff63-31e9-47b7-eb83-c7d2e1dfeb2c"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+            "[nltk_data] Downloading package wordnet to\n",
+            "[nltk_data]     C:\\Users\\linhn\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to\n",
+            "[nltk_data]     C:\\Users\\linhn\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -164,7 +167,7 @@
       "outputs": [],
       "source": [
         "#load Training Data\n",
-        "data = pd.read_csv(\"labeled_data.csv\")"
+        "data = pd.read_csv(\"sample_data/labeled_data.csv\")"
       ]
     },
     {
@@ -210,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "3f_ctQO0O1hH"
       },
@@ -236,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "otA4PoROULzw"
       },
@@ -251,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "ON7G_FtzVAP9"
       },
@@ -272,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 10,
       "metadata": {
         "id": "Iq68t8h4Y3lT"
       },
@@ -303,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 11,
       "metadata": {
         "id": "v5Y4YY0SfhYO"
       },
@@ -325,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 12,
       "metadata": {
         "id": "fVsWCQnX7XjZ"
       },
@@ -373,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 13,
       "metadata": {
         "id": "JhddyqnXuzKg"
       },
@@ -381,7 +384,7 @@
       "source": [
         "#Load, Clean, and Divide test file into X_test and Y_test\n",
         "\n",
-        "data_test = pd.read_csv(\"testhatespeech.csv\")\n",
+        "data_test = pd.read_csv(\"sample_data/testhatespeech.csv\")\n",
         "data_test[\"tweet\"] = data_test[\"tweet\"].apply(clean_data, stop_words = stop_words, max_length = 1000)\n",
         "def minimize(text, max_length):\n",
         "  text = text[:max_length]\n",
@@ -393,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 14,
       "metadata": {
         "id": "Flan_AkuYkn3"
       },
@@ -412,7 +415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 15,
       "metadata": {
         "id": "usn8qCdkDZAF"
       },
@@ -427,21 +430,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 16,
       "metadata": {
-        "id": "ZWdgO-Ji6XjM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "ZWdgO-Ji6XjM",
         "outputId": "93c5ec26-6527-4943-ab0d-08cbd2dae018"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "torch.Size([3554, 31, 1])\n",
-            "The accuracy of the model through testing: 75.80872178077698%\n"
+            "The accuracy of the model through testing: 77.13080048561096%\n"
           ]
         }
       ],
